.archive/kubernetes/apps/networking/softether/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: softether
  annotations:
    external-dns.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.kubernetes.io/exclude-unifi: "true"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`vpn.${SECRET_DOMAIN}`)
    services:
    - name: softether
      port: 443
  tls:
    passthrough: true
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
